# open_gl-app

./: CMakeLists.txt  README.md  open_gl-app.sln  open_gl-app.vcxproj  open_gl-app.vcxproj.filters
libs/: glfw3.lib
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  main.cpp
